# issi_ipum_lab11_cicd

./: Dockerfile  Dockerfile.dev  LAB_INSTRUCTION.md  README.md  pyproject.toml  sam-template.yaml
.github/workflows/: ci_cd_workflow.yaml  hello_world.yaml
scripts/: recover_rollback.sh  resolve_lambda_role.sh  sam_deploy.sh
sentiment_app/: app.py  models.py
src/scripts/: export_zeroshot_to_onnx.py  prepare_model_from_hf.py  settings.py
tests/: test_app.py
